appId: com.empezarainvertir.app
---
- runFlow: open-trade.yaml
- scrollUntilVisible:
    element: "Revisar orden"
    direction: DOWN
    centerElement: true
- tapOn: "Revisar orden"
- assertVisible: "Revisa tu orden"
